--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <button id="copyBtn">Copy</button>
     <div id="notification" class="hidden"></div>
   </body>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </html>
 
