--- a/signup.html
+++ b/signup.html
@@ -45,6 +45,6 @@
         </div>
       </div>
     </form>
-    <script src="signup.js"></script>
+    <script type="module" src="signup.js"></script>
   </body>
 </html>
