--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
         </div>
         <div class="signup">
           <p class="signup">
-            Already have an account? <a href="login.html">Login here</a>
+            Already have an account? <a href="index.html">Login here</a>
           </p>
         </div>
       </div>
