--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="input">
-      <textarea id="domain" placeholder="Enter multiple lines"></textarea>
+      <textarea id="domain" placeholder="Enter your set"></textarea>
       <button id="generateBtn">Generate</button>
     </div>
     
